--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">Testing</div>
+  <!--
   <script src="../src/index.js" type="text/jsx"></script>
+  -->
 </body>
 
 </html>
