--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="root">Testing</div>
+  <div id="root"></div>
   <script src="../src/index.js" type="text/jsx"></script>
 </body>
 
